# tinychange

./: CHANGELOG.md  Cargo.toml  LICENSE.MIT  README.md  dist-workspace.toml  release.sh  release.toml  shell.nix  tinychange.toml  toolchain.toml
.github/workflows/: release.yml
.tinychange/: advanced-responsive-superstructure-1c3d122.md  compatible-dynamic-installation-2f28c29.md  cross-group-national-projection-8aeaea5.md  devolved-impactful-help-desk-f4f80c4.md  devolved-tertiary-software-e28bb76.md  distributed-methodical-functionalities-b3b54d2.md  expanded-contextually-based-approach-27d7eaa.md  innovative-empowering-moderator-2f325f4.md  monitored-4th-generation-moderator-5dee63b.md  monitored-heuristic-application-969ed3f.md  profit-focused-homogeneous-paradigm-4258015.md  reactive-24_7-access-3e736da.md  visionary-executive-software-10babf5.md
src/: commands.rs  config.rs  lib.rs  naming.rs  tinychange.rs
src/commands/: init.rs  merge.rs  new.rs
src/test/: mod.rs
src/test/cases/changelog_with_bad_category_in_unreleased_section/: CHANGELOG.md
src/test/cases/changelog_with_empty_unreleased_section/: CHANGELOG.md
src/test/cases/changelog_with_empty_unreleased_section_with_descriptions/: CHANGELOG.md
src/test/snapshots/: tinychange__test__changelog_tests@changelog_with_bad_category_in_unreleased_section.snap  tinychange__test__changelog_tests@changelog_with_empty_unreleased_section.snap  tinychange__test__changelog_tests@changelog_with_empty_unreleased_section_with_descriptions.snap  tinychange__test__changelog_tests@changelog_with_empty_unreleased_section_with_tight_descriptions.snap  tinychange__test__changelog_tests@changelog_with_filled_unreleased_section.snap  tinychange__test__changelog_tests@changelog_with_no_unreleased_section.snap  tinychange__test__changelog_tests@changelog_with_unreleased_section_with_descriptions.snap  tinychange__test__changelog_tests@empty_changelog.snap  tinychange__test__changelog_tests@missing_changelog.snap
(+5 files in other folders)
