[package]
name = "tinychange"
version = "0.2.0"
authors = ["juh9870 <github.com/juh9870>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A tool for creating tiny changelogs on a fly!"
repository = "https://github.com/juh9870/tinychange"
readme = "README.md"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
fake = "3.0.1"
fs-err = "3.1.0"
inquire = "0.7.5"
miette = { version = "7.4.0", features = ["fancy", "derive"] }
normalize-line-endings = "0.3.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
regex = "1.11.1"
sanitise-file-name = "1.0.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
toml = "0.8.19"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
dircpy = "0.3.19"
insta = { version = "1.42.0", features = ["glob"] }
shell-words = "1.1.0"
strip-ansi-escapes = "0.2.1"
temp-dir = "0.1.14"
